test/files/pos/t10350/Foo.java

package foo;

public interface Foo {
  static Foo create(java.lang.String v) {
    return null;
  }
}
