test/files/neg/t11788b/Foo.java
public class Foo {
	private String java;

	public java.lang.Integer test() {
		return Integer.valueOf(42);
	}
}
